# sprintwoche-cicd-palindrome-check-hs

./: .gitlab-ci.yml  CHANGELOG.md  README.md  palindrome-check.cabal
.github/actions/setup-haskell-cached/: action.yml
.github/workflows/: ci-multijob.yml  ci-simple.yml
lib/: Palindrome.hs
test/: Doctest.hs  Main.hs
